# matcha

./: .gitignore  Cargo.toml  readme.md
gpu-utils/: Cargo.toml
gpu-utils/src/: buffer_atlas.rs  device_loss_recoverable.rs  gpu.rs  gpu_type_map.rs  lib.rs  texture_atlas.rs  wgpu_utils.rs
gpu-utils/src/buffer_atlas/: buffer_atlas.rs  buffer_cache.rs
gpu-utils/src/texture_atlas/: atlas_simple.rs  atlas_with_runtime.rs
gpu-utils/src/texture_atlas/atlas_simple/: atlas.rs  manager.rs
gpu-utils/src/texture_atlas/atlas_simple/atlas/: viewport_clear.rs  viewport_clear.wgsl
gpu-utils/src/texture_atlas/atlas_with_runtime/: atlas.rs
matcha/: Cargo.toml
matcha-core/: Cargo.toml
matcha-core/src/: adapter.rs  app.rs  application.rs  application_instance.rs  backend.rs  color.rs  context.rs  debug_config.rs  device_input.rs  event.rs  event_sender.rs  lib.rs  metrics.rs  tree_app.rs  ui_arch.rs  window.rs  window_manager.rs  window_surface.rs  window_ui.rs  winit_instance.rs  winit_interface.rs  world_graph.rs
matcha-core/src-old/: debug_config.rs  ui.rs  winit_instance.rs
matcha-core/src-old/device_input/: key_input.rs  key_state.rs  mouse_input.rs  mouse_state.rs
matcha-core/src-old/ui/: background.rs  widget.rs
matcha-core/src-old/winit_instance/: builder.rs
matcha-core/src/device_input/: window_state.rs
matcha-core/src/event/: device_event.rs  raw_device_event.rs  window_event.rs
matcha-core/src/event/device_event/: button_state.rs  element_state.rs  key_state.rs  mouse_input.rs  mouse_state.rs
matcha-core/src/tree_app/: component.rs  context.rs  metrics.rs  sub_widgets.rs  widget.rs  window.rs
matcha-core/src/ui/: component.rs  widget.rs
matcha-core/src/ui_arch/: component.rs  metrics.rs  sub_widgets.rs  ui_context.rs  ui_window.rs  update_flag.rs  widget.rs  window.rs  window_model.rs
matcha-core/src/window/: window_config.rs  window_surface.rs  winit_window.rs
matcha-core/src/winit_instance/: builder.rs  window_ui.rs
matcha-ecs/: Cargo.toml
matcha-ecs/src/: lib.rs  ui_ecs.rs
matcha-tree/: Cargo.toml
matcha-tree-widgets/: Cargo.toml
matcha-tree-widgets/src/: buffer.rs  layout.rs  lib.rs  style.rs  types.rs
matcha-tree-widgets/src/layout/: column.rs  grid.rs  padding.rs  position.rs  row.rs  space.rs  visibility.rs
matcha-tree-widgets/src/style/: image.rs  polygon.rs  solid_box.rs  text.rs  viewport_clear.rs
matcha-tree-widgets/src/types/: size.rs
matcha-tree-widgets/src/vertex/: colored_vertex.rs
matcha-tree-widgets/src/widget/: button.rs  image.rs  plain.rs  template_widget.rs  text.rs
matcha-tree/src/: lib.rs  ui_tree.rs
matcha-tree/src/ui_tree/: component.rs  context.rs  sub_widgets.rs  widget.rs  window.rs
matcha-widgets/: Cargo.toml
matcha-widgets/src/: buffer.rs  layout.rs  renderer.rs  style.rs  vertex.rs  widget.rs
matcha-widgets/src/layout/: column.rs  grid.rs  padding.rs  position.rs  row.rs  space.rs  visibility.rs
matcha-widgets/src/style/: image.rs  polygon.rs  solid_box.rs  text.rs  text_cosmic.rs  viewport_clear.rs
matcha-widgets/src/types/: flex.rs  grow_size.rs  size.rs
matcha-widgets/src/vertex/: uv_vertex.rs
matcha-widgets/src/widget/: button.rs  image.rs  plain.rs  template_widget.rs  text.rs
matcha-window/: Cargo.toml
matcha-window/src/: adapter.rs  lib.rs  window.rs  winit_interface.rs
matcha-window/src/event/: device_event.rs
matcha-window/src/event/device_event/: element_state.rs  key_input.rs  key_state.rs  mouse_state.rs
matcha/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: core_renderer.rs  debug_renderer.rs  lib.rs  render_node.rs  widgets_renderer.rs
renderer/src/core_renderer/: renderer_command.wgsl  renderer_cull.wgsl  renderer_render.wgsl
renderer/src/vertex/: mod.rs
renderer/src/widgets_renderer/: bezier_2d.rs  bezier_2d_command.wgsl  bezier_2d_compute.wgsl  bezier_2d_draw.wgsl  line_strip.rs  line_strip.wgsl  texture_color.rs  texture_color.wgsl  texture_copy.rs  texture_copy.wgsl  vertex_color.rs  vertex_color.wgsl  viewport_clear.rs
shared-buffer/: Cargo.toml
shared-buffer/src/: context.rs  lib.rs  shared_value.rs
text-render/: Cargo.toml
text-render/src/: cache_atlas.rs  error.rs  keys.rs  lib.rs  recursive_atlas.rs  text.rs
text-render/src/recursive_atlas/: cache_node.rs
text-render/src/text/: config.rs  core.rs
utils/: Cargo.toml
utils/src/: back_prop_dirty.rs  benchmark.rs  cache.rs  lib.rs  process_unique_id.rs  rwoption.rs  type_map.rs  update_flag.rs
utils/tests/: back_prop_dirty.rs  rwoption.rs
