[package]
name = "matcha-window"
edition = "2024"
version.workspace = true

[dependencies]
# self
utils = { workspace = true }
gpu-utils = { workspace = true }
shared-buffer = { workspace = true }

wgpu = { workspace = true }

# async runtime, utility
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# winit
winit = { workspace = true, optional = true }
baseview = { workspace = true, optional = true }

# math
nalgebra = { features = ["bytemuck"], workspace = true }

# other
bitflags = { workspace = true }
num = { workspace = true }
fxhash = { workspace = true }
dashmap = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
enum-map = "2.7.3"

[features]
default = ["winit"]
winit = ["dep:winit"]
baseview = ["dep:baseview"]

[lints]
workspace = true
