[package]
name = "matcha"
version = { workspace = true }
edition = "2024"

[dependencies]
# self
matcha-core = { workspace = true }
matcha-widgets = { workspace = true }
gpu-utils = { workspace = true }
shared-buffer = { workspace = true }

# runtime
tokio = { workspace = true }

# log
env_logger = "^0.11.8"
log = { workspace = true }

[lints]
workspace = true
